tests/invalid/Final_Invalid_3.whiley
final int CONSTANT = 0

function f(int x) -> (int r):
    //
    CONSTANT = CONSTANT + x
    //
    return CONSTANT
